<resources>
    <string name="app_name">OggettoApp</string>
    <string name="logo">logo</string>
    <string name="auth">Авторизация</string>
    <string name="login">Логин</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="auth_btn">Войти</string>
    <string name="register">Регистрация</string>
    <string name="next">Далее</string>
    <string name="title">Заголовок</string>
    <string name="annotation">Аннотация</string>
    <string name="date">Дата</string>
    <string name="add">add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_event">Создание события</string>
    <string name="telegram">Telegram</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="createDate">"Дата создания"</string>
    <string name="delete">Удалить</string>
    <string name="rename">Редактировать</string>
    <string name="participate">Участвовать</string>
</resources>