<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.auth.AuthFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/dark_purple"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/qanelas"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/loginEditText"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/edit_text_corners"
                    android:ems="10"
                    android:fontFamily="@font/qanelas"
                    android:hint="@string/login"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_corners"
                    android:ems="10"
                    android:fontFamily="@font/qanelas"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_corners"
                    android:ems="10"
                    android:fontFamily="@font/qanelas"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </LinearLayout>

            <Button
                android:id="@+id/authButton"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/qanelas"
                android:text="@string/next" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_oggeto" />

</LinearLayout>